--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* *{
+  margin: 0;
+  
+} */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: #f3f2ef;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.app_body{
+  width: 70%;
+  padding: 0px 15%;
+  display: flex;
+  
 }
